have friendsform posting friend to server, and updating friends state array. also have logout

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -20,3 +20,22 @@
 .App-link {
   color: #09d3ac;
 }
+
+.friends {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.friend {
+  width: 30%;
+  padding: 5%;
+  margin: 2.5%;
+  border: 1px solid black;
+}
+
+.friends-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  
+}
